syntax = "proto3";

import "user.proto";

package auth;

option go_package = "auth";

service AuthService {
    rpc LoginUser (LoginUserDto) returns (user.User) {}
    rpc OauthLogin (OauthLoginDto) returns (user.User) {}
    rpc ValidateEmail (ValidateEmailDto) returns (ValidationResponse) {}
    rpc ValidateNickname (ValidateNicknameDto) returns (ValidationResponse) {}
}

message LoginUserDto {
    string email = 1;
    string password = 2;
}

message OauthLoginDto {
    string provider = 1;
    string providerId = 2;
}

message ValidateEmailDto {
    string email = 1;
}

message ValidateNicknameDto {
    string nickname = 1;
}

message ValidationResponse {
    bool isAvailable = 1;
    string message = 2;
}